--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
    }
    @media(max-width: 750px){
     .message{
-      position: absolute;
+      position: fixed;
       top: 16vh;
       left:10%;
       width: 50%;
       opacity: 0;
+      z-index: 5;
     }
     .logo{
       position: absolute;
