--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
        
   var rollno =  document.getElementById("roll").value;
   var redundant = document.getElementById("redundant").value;
-  var captcha = document.getElementById("captcha").value;
-  if(rollno == '19D180017'&& redundant != 'OTP' && redundant != '' && captcha == "dessert") {
+  
+  if(rollno == '19D180017'&& redundant != 'OTP' && redundant != '') {
  
   }
   else{
