--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
      <div class = "left-bottom">
            <div  class = "head">
            <span style="line-height: 50px;">Computer Center<br></span>
-           <span style="font-size: .5em;">IIITNR</span>
+           <span style="font-size: .5em;">IITB</span>
            </div>
     </div>
     <div class="alert alert-danger message" role="alert"  id = "red">
-      HAPPY BIRTHDAY Sourajita!!! (This is Jai btw, I didn't have many photos together but...). I might have not have exactly been the "best" in this and am really bad at writing cheeky stuff at the last minute but hope you have a enjoyable birthday and may your sweetness never be reduced.
+    Hi aman
     </div>
     <div class = "main">
       <span style = "font-size: 23px; color: grey;font-family: 'Open Sans',sans-serif;">Sign in with LDAP</span><br><br>
